--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,5 +3,6 @@
 @use 'typography';
 @use 'variables';
 @use 'navbar';
+@use 'themes';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
 
