--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,10 +1,10 @@
 @use 'variables';
 
+.navbar{
+    display: none;
+    background-color: variables.$honolulu;
+}
 
 .nav-logo{
     width: 55px;
-}
-
-.navbar{
-    background-color: yellow;
 }
