--- a/src/scss/_home-section.scss
+++ b/src/scss/_home-section.scss
@@ -2,6 +2,9 @@
 
 
 .home-section{
+    
+    text-align: center;
+    
     img{
         width: 50%;
         max-width: 250px;
@@ -10,4 +13,6 @@
         border-radius: 35px;
         border: 2px solid variables.$honolulu;
     }
+
+
 }
