--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @use 'typography';
 @use 'variables';
 @use 'navbar';
+@use 'bottomnav';
 @use 'themes';
 @use 'home-section';
 @use 'projects-section';
