--- a/src/scss/_home-section.scss
+++ b/src/scss/_home-section.scss
@@ -14,5 +14,13 @@
         border: 2px solid variables.$honolulu;
     }
 
+    h1{
+        margin-bottom: 0; 
+    }
+
+    .subheading{
+        margin-top:0;
+    }
+
 
 }
