--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -10,8 +10,8 @@
     background-color: variables.$mineshaft;
     color: variables.$gallery;
 
-    h1{
-      color: variables.$honolulu;
+    h1, h2{
+      color: variables.$cerulian;
     }
 
     }
