--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,6 +3,25 @@
 .navbar{
     display: none;
     background-color: variables.$honolulu;
+
+    @media screen and (min-width: 700px){
+        position:fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 70px;
+        display: flex;
+        flex-direction: column;
+        /* z-index: 200; */
+        background-color: #0076B6;
+        list-style: none;
+        overflow:hidden;
+        -webkit-transition:width .3s linear;
+        transition:width .3s linear;
+        -webkit-transform:translateZ(0) scale(1,1);
+        z-index:1000;
+
+    }
 }
 
 .nav-logo{
