hover for main nav menu

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -24,6 +24,11 @@
     }
 }
 
+.navbar:hover,nav.main-menu.expanded {
+    width:150px;
+    overflow:visible;
+    }
+
 .nav-logo{
     width: 55px;
 }
