hide scrollbar on main page

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -19,3 +19,16 @@ section{
 .home-section, .about-section, .contact-section{
     padding-top: 3.75rem;
 }
+
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .grid-align {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
