navbar styling (desktop)

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -4,12 +4,16 @@
     display: none;
     background-color: variables.$honolulu;
     color: variables.$white;
-    text-align: center;
+    text-align: right;
 
     .nav-logo{
         width: 55px;
         padding: 5px;
-        text-align: right;
+    }
+
+    .navbar-text{
+        text-align:center; 
+        height: 54px;
     }
 
     svg{
@@ -19,6 +23,12 @@
     ul{
         list-style: none;
         padding-left: 20px;
+        text-transform: uppercase;
+
+        
+        path{
+            fill: variables.$white;
+        }
     }
 
     @media screen and (min-width: 700px){
@@ -30,7 +40,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        /* z-index: 200; */
         background-color: #0076B6;
         list-style: none;
         overflow:hidden;
@@ -66,4 +75,5 @@
 .nav-button{
     display: flex;
     align-items: center;
+    color: variables.$white;
 }
