--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,12 +1,3 @@
-// body {
-//     margin: 0;
-//     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-//       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-//       sans-serif;
-//     -webkit-font-smoothing: antialiased;
-//     -moz-osx-font-smoothing: grayscale;
-//   }
-
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -21,6 +12,7 @@ body {
 
   h1,h2,h3{
     font-weight: 400;
+    text-transform: uppercase;
   }
   a{
     text-decoration: none;
@@ -28,8 +20,4 @@ body {
 
   p{
     font-size: 90%;
-  }
-
-  .selector-buttons{
-    
   }
