--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -3,7 +3,7 @@
 
     @media screen and (min-width: 700px){
         display: grid;
-        grid-template-columns: 1fr minmax(420px, 1100px) 1fr 150px;
+        grid-template-columns: minmax(30px, 1fr) minmax(420px, 1100px) minmax(30px, 1fr) 150px;
 
         .grid-align{
             grid-column-start: 2;
