home page styling

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -12,11 +12,10 @@
 }
 
 section{
-    // padding-top: 3.75rem;
     min-height: 100vh;
 }
 
-.home-section, .about-section, .contact-section{
+.about-section, .contact-section{
     padding-top: 3.75rem;
 }
 
