--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -10,6 +10,13 @@ body {
       monospace;
   }
 
+  h1{
+    font-size: 180%;
+    @media screen and (min-width:800px) {
+      font-size: 250%;  
+      margin-top: 0;
+    }
+  }
   h1,h2,h3{
     font-weight: 400;
     text-transform: uppercase;
