added wp images to project page

--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -1,7 +1,8 @@
 .filter-container{
     img{
         width: 60px;
-        filter: grayscale(65%);
+        filter: grayscale(45%);
+        padding: 10px
         
     }
 }
