added top bar to single project page

--- a/src/scss/_home-section.scss
+++ b/src/scss/_home-section.scss
@@ -9,8 +9,9 @@
     justify-content: center;
     
     img{
-        width: 95%;
-        max-width: 250px;
+        width: 200px;
+        // width: 95%;
+        // max-width: 250px;
         // min-width: 180px;
         display: block;
         margin: 0 auto;
