temporary photo sizing

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -31,3 +31,8 @@ body::-webkit-scrollbar {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
   }
+
+  //this is temporary
+  img{
+    width: 95%;
+  }
