contact section content and layout

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -15,7 +15,7 @@ section{
     min-height: 100vh;
 }
 
-.about-section, .projects-section, .contact-section{
+.about-section, .projects-section{
     padding-top: 3.75rem;
 }
 
