link button styling

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -20,6 +20,15 @@
       fill: variables.$honolulu;
     }
   }
+
+  .link-button{
+    background-color: variables.$white;
+    color: variables.$mineshaft;
+
+    a {
+        color: variables.$mineshaft;
+    }
+  }
 }
 
 #light {
