--- a/src/scss/_contact-section.scss
+++ b/src/scss/_contact-section.scss
@@ -17,6 +17,7 @@
     padding: 1rem;
     margin-bottom:100px;
     text-align: center;
+    font-size: 125%;
 
     svg{
         height: 36px;
@@ -27,4 +28,12 @@
         fill: variables.$honolulu;
     }
 
+}
+
+#dark{
+    .contact-box{
+        box-shadow: 0px 2px 1px -1px rgb(255 255 255 / 20%), 
+        0px 1px 1px 0px rgb(255 255 255 / 14%), 
+        0px 1px 3px 0px rgb(255 255 255 / 12%);
+    }
 }
