individual project styling

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -24,10 +24,10 @@
   .link-button{
     background-color: variables.$white;
     color: variables.$mineshaft;
+  }
 
-    a {
-        color: variables.$mineshaft;
-    }
+  .link-button:hover{
+    background-color: variables.$honolulu;
   }
 }
 
