--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,10 +1,16 @@
 @use 'variables';
 
+.link-button-wrapper {
+    text-align: center;
+}
+
 .link-button {
+    text-transform: uppercase;
     height: 36px;
     width: 170px;
     border-radius: 10px;
     border: none;
+    margin: 1rem auto;
     background-color: variables.$mineshaft;
     color: variables.$white;
 
@@ -12,4 +18,8 @@
         color: variables.$white;
     }
 
+}
+
+.link-button:hover {
+    background-color: variables.$honolulu;
 }
