--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -1,4 +1,42 @@
 .project-home-section{
     padding: 60px 0;
     grid-column-start: 2;
+
+    h1, h2, h3 {
+        text-align: center;
+    }
+}
+
+.project-details{
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.project-section {
+    margin: 2rem 0;
+}
+
+#light{
+    .project-section {
+        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 
+                    0px 1px 1px 0px rgb(0 0 0 / 14%), 
+                    0px 1px 3px 0px rgb(0 0 0 / 12%);
+    
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;    
+        padding: 1rem;
+    }
+}
+
+#dark{
+    .project-section {
+        box-shadow: 0px 2px 1px -1px rgb(255 255 255 / 20%), 
+                    0px 1px 1px 0px rgb(255 255 255 / 14%), 
+                    0px 1px 3px 0px rgb(255 255 255 / 12%);
+    
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;    
+        padding: 1rem;
+    }
 }
