font colour on tabs

--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -1,7 +1,9 @@
 .filter-container{
     img{
         filter: grayscale(25%);
-        padding: 10px
+        padding: 10px;
+        width: 60px;
+        height: 88px;
         
     }
 }
