--- a/src/scss/_projects-section.scss
+++ b/src/scss/_projects-section.scss
@@ -1,5 +1,9 @@
 .featured-image{
-    width: 85%;
+    width: 100%;
     display: block;
     margin: 0 auto;
+}
+
+.project-image {
+    width: 100%;
 }
