--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -21,14 +21,14 @@
     }
   }
 
-  .link-button{
-    background-color: variables.$white;
-    color: variables.$mineshaft;
-  }
+  // .link-button{
+  //   background-color: variables.$white;
+  //   // color: variables.$mineshaft;
+  // }
 
-  .link-button:hover{
-    background-color: variables.$honolulu;
-  }
+  // .link-button:hover{
+  //   background-color: variables.$honolulu;
+  // }
 }
 
 
@@ -51,10 +51,7 @@
     }
   }
 
-
-
-
-  
+   
 
     .filter-item{
       padding: 0 10px;
