--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -29,6 +29,7 @@
 $color: #0cf;
 
 .link-button {
+    font-weight: 600;
   display: inline-block;
   border-radius: 10px;
   color: #fff;
@@ -63,9 +64,21 @@ $color: #0cf;
     z-index: -1;
   }
   &:hover {
-    color: #fff;
+    color: variables.$white;
     &:before {
       width: 100%;
     }
   }
+}
+
+#dark{
+    .link-button{
+        color: variables.$mineshaft;
+        &:after {
+            background-color: variables.$gallery;
+    }
+        &:hover{
+            color: variables.$white;
+        }
+}
 }
