--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -88,3 +88,44 @@
     color: variables.$white;
 }
 
+// $color: #0cf;
+
+// .nav-button {
+//   border-radius: 10px;
+//   text-transform: uppercase;
+//   transition: all .7s;
+//   position: relative;
+//   overflow: hidden;
+//   z-index: 1;
+//   &:after {
+//     content: '';
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     border-radius: 10px;
+//     z-index: -2;
+//   }
+//   &:before {
+//     content: '';
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     width: 0%;
+//     height: 100%;
+//     background-color: variables.$cerulian;
+//     transition: all .7s;
+//     border-radius: 10px;
+//     z-index: -1;
+//   }
+//   &:hover {
+//     color: variables.$white;
+//     &:before {
+//       width: 90%;
+//     }
+//   }
+// }
+
+
+
