accordiong styling, image brightness

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -21,14 +21,10 @@
     }
   }
 
-  // .link-button{
-  //   background-color: variables.$white;
-  //   // color: variables.$mineshaft;
-  // }
+  img {
+    filter: brightness(.85);
+  }
 
-  // .link-button:hover{
-  //   background-color: variables.$honolulu;
-  // }
 }
 
 
