--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .filter-container{
     img{
         filter: grayscale(25%);
@@ -5,6 +7,14 @@
         width: 60px;
         height: 88px;
         
+    }
+}
+
+
+#dark {
+    .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root {
+        background-color: rgba(75, 75, 75, .75);
+        color: variables.$gallery;
     }
 }
 
