styling for accordions (shadows to match)

--- a/src/scss/_bottomnav.scss
+++ b/src/scss/_bottomnav.scss
@@ -1,6 +1,7 @@
 @use 'variables';
 
 .bottom-nav{
+    z-index:200;
     position:fixed;
     bottom: 0;
     background-color: variables.$honolulu;
