--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -16,5 +16,15 @@
         background-color: rgba(75, 75, 75, .75);
         color: variables.$gallery;
     }
+
+    .about-section .MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.css-i4bv87-MuiSvgIcon-root {
+        color: variables.$gallery;
+    }
+
+    .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.Mui-expanded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root, .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root{
+        box-shadow: 0px 2px 1px -1px rgb(255 255 255 / 20%), 
+        0px 1px 1px 0px rgb(255 255 255 / 14%), 
+        0px 1px 3px 0px rgb(255 255 255 / 12%);
+    }
 }
 
