--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -10,7 +10,13 @@
     }
 }
 
+.MuiAccordionSummary-content.MuiAccordionSummary-contentGutters.css-o4b71y-MuiAccordionSummary-content {
+    align-items: center;
 
+    svg {
+        padding-right: 20px;
+    }
+}
 #dark {
     .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root {
         background-color: rgba(75, 75, 75, .75);
