--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -34,3 +34,13 @@
     }
 }
 
+//Education Section
+.education-accordion {
+    h3, h4, p {
+        margin: 0;
+    }
+
+    .education-card {
+        margin: 2rem 0;
+    }
+}
