--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -10,6 +10,10 @@
     }
 }
 
+.selector-buttons {
+    text-align: center;
+}
+
 .MuiAccordionSummary-content.MuiAccordionSummary-contentGutters.css-o4b71y-MuiAccordionSummary-content {
     align-items: center;
 
@@ -51,6 +55,10 @@
 
         .education-duration{
             font-style: italic;
+        }
+
+        .education-notes {
+            padding-left: .5rem;
         }
     }
 }
