--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -1,4 +1,6 @@
 @use 'variables';
+@use 'mixins' as m;
+
 
 .filter-container{
     img{
@@ -32,9 +34,8 @@
     }
 
     .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.Mui-expanded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root, .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root{
-        box-shadow: 0px 2px 1px -1px rgb(255 255 255 / 20%), 
-        0px 1px 1px 0px rgb(255 255 255 / 14%), 
-        0px 1px 3px 0px rgb(255 255 255 / 12%);
+        @include m.dark-mode-shadow;
+
     }
 }
 
