--- a/src/scss/_contact-section.scss
+++ b/src/scss/_contact-section.scss
@@ -1,4 +1,5 @@
 @use 'variables';
+@use 'mixins' as m;
 
 .contact-section{
     display: flex;
@@ -32,8 +33,6 @@
 
 #dark{
     .contact-box{
-        box-shadow: 0px 2px 1px -1px rgb(255 255 255 / 20%), 
-        0px 1px 1px 0px rgb(255 255 255 / 14%), 
-        0px 1px 3px 0px rgb(255 255 255 / 12%);
+        @include m.dark-mode-shadow;
     }
 }
