--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -1,3 +1,5 @@
+@use 'mixins' as m;
+
 .project-home-section {
     padding: 60px 0;
     grid-column-start: 2;
@@ -41,22 +43,13 @@
 
 #dark{
     .project-section {
-        box-shadow: 0px 2px 1px -1px rgb(255 255 255 / 20%), 
-                    0px 1px 1px 0px rgb(255 255 255 / 14%), 
-                    0px 1px 3px 0px rgb(255 255 255 / 12%);
+        @include m.dark-mode-shadow;
     
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;    
         padding: 1rem;
     }
 }
-
-// .project-navigation {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: flex-end;
-
-// }
 
 .project-navigation {
     text-align: center;
