projects page button styling

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -26,10 +26,9 @@
 
 
 
-$color: #0cf;
-
 .link-button {
-    font-weight: 600;
+  font-weight: 500;
+  border: none;
   display: inline-block;
   border-radius: 10px;
   color: #fff;
