--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -55,6 +55,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px;
 
 
     @media screen and (min-width: 600px) {
