project page styling

--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -57,6 +57,10 @@
     flex-direction: column;
     margin-bottom: 10px;
 
+    .link-button {
+        margin: 10px 0;
+    }
+
 
     @media screen and (min-width: 600px) {
 
