--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -23,6 +23,14 @@
 
 .selector-buttons {
     text-align: center;
+    
+    button {
+        
+    }
+
+    .button-checked {
+        background-color: variables.$honolulu;
+    }
 }
 
 .MuiAccordionSummary-content.MuiAccordionSummary-contentGutters.css-o4b71y-MuiAccordionSummary-content {
