removed pre styling

--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -82,13 +82,13 @@
     }
 }
 
-    pre {
-        overflow-x: auto;
-        white-space: pre-wrap;
-        white-space: -moz-pre-wrap;
-        white-space: -pre-wrap;
-        white-space: -o-pre-wrap;
-        word-wrap: break-word;
-     }
+    // pre {
+    //     overflow-x: auto;
+    //     white-space: pre-wrap;
+    //     white-space: -moz-pre-wrap;
+    //     white-space: -pre-wrap;
+    //     white-space: -o-pre-wrap;
+    //     word-wrap: break-word;
+    //  }
 
 
