--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -17,7 +17,6 @@
         padding: 10px;
         width: 60px;
         height: 88px;
-        
     }
 }
 
@@ -29,7 +28,8 @@
     }
 
     .button-checked {
-        background-color: variables.$honolulu;
+        background-color: variables.$cerulian;
+        color: variables.$white;
     }
 }
 
