--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -1,4 +1,5 @@
 @use 'mixins' as m;
+@use 'variables';
 
 .project-home-section {
     padding: 60px 0;
@@ -48,6 +49,10 @@
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;    
         padding: 1rem;
+    }
+
+    pre {
+        background: variables.$gallery !important; 
     }
 }
 
