removing random css identifier on mui accordion

--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -15,7 +15,8 @@
         fill: variables.$cerulian;
     }
 }
-.MuiAccordionSummary-content.MuiAccordionSummary-contentGutters.css-o4b71y-MuiAccordionSummary-content {
+.MuiAccordionSummary-content.MuiAccordionSummary-contentGutters {
+// .MuiAccordionSummary-content.MuiAccordionSummary-contentGutters.css-o4b71y-MuiAccordionSummary-content {
     align-items: center;
     svg {
         padding-right: 20px;
