--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -10,29 +10,29 @@
 }
 
 #dark .Mui-expanded {
-    // color: variables.$cerulian;
     svg {
         fill: variables.$cerulian;
     }
 }
 .MuiAccordionSummary-content.MuiAccordionSummary-contentGutters {
-// .MuiAccordionSummary-content.MuiAccordionSummary-contentGutters.css-o4b71y-MuiAccordionSummary-content {
+
     align-items: center;
     svg {
         padding-right: 20px;
     }
 }
 #dark {
-    .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root {
+    .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters {    
         background-color: rgba(75, 75, 75, .75);
         color: variables.$gallery;
     }
 
-    .about-section .MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.css-i4bv87-MuiSvgIcon-root {
+
+    .about-section .MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium {
         color: variables.$gallery;
     }
 
-    .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.Mui-expanded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root, .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters.css-1elwnq4-MuiPaper-root-MuiAccordion-root{
+    .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.Mui-expanded.MuiAccordion-gutters, .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters{
         @include m.dark-mode-shadow;
 
     }
