--- a/src/scss/_bottomnav.scss
+++ b/src/scss/_bottomnav.scss
@@ -17,9 +17,13 @@
     }
 
     li{
-        padding-top: 5px;
+        padding-top: 7px;
         width: 70px;
         text-align: center;
+
+        .active{
+            line-height: .5;
+        }
     }
 
     path{
