--- a/src/scss/_bottomnav.scss
+++ b/src/scss/_bottomnav.scss
@@ -20,10 +20,7 @@
         padding-top: 7px;
         width: 70px;
         text-align: center;
-
-        .active{
-            line-height: .5;
-        }
+        line-height: 1;
     }
 
     path{
@@ -38,7 +35,7 @@
         margin-top: 0;
       }
 
-      @media screen and (min-width: 800px){
+      @media screen and (min-width: 900px){
         display: none;
       }
 }
