--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -3,3 +3,9 @@
     0px 1px 1px 0px rgb(255 255 255 / 14%), 
     0px 1px 3px 0px rgb(255 255 255 / 12%);
 }
+
+@mixin mui-override {
+    font-family: "Poppins", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+}
