--- a/src/scss/_contact-section.scss
+++ b/src/scss/_contact-section.scss
@@ -8,9 +8,7 @@
 }
 
 .contact-box{
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 
-                0px 1px 1px 0px rgb(0 0 0 / 14%), 
-                0px 1px 3px 0px rgb(0 0 0 / 12%);
+    @include m.light-mode-shadow;
 
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
