--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -32,9 +32,7 @@
 
 #light{
     .project-section {
-        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 
-                    0px 1px 1px 0px rgb(0 0 0 / 14%), 
-                    0px 1px 3px 0px rgb(0 0 0 / 12%);
+        @include m.light-mode-shadow;
     
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;    
@@ -45,7 +43,6 @@
 #dark{
     .project-section {
         @include m.dark-mode-shadow;
-    
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;    
         padding: 1rem;
@@ -64,7 +61,6 @@
 
     .link-button {
         margin: 10px 0;
-        
     }
 
     @media screen and (min-width: 600px) {
@@ -103,7 +99,6 @@
         width: 48%;
         max-width: 400px;
         margin: 0;
-        
         }
     }
 
