added styling to figure elements

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -25,3 +25,10 @@ body {
     text-decoration: none;
   }
 
+  figcaption {
+    font-size: 80%;
+    text-align: center;
+    font-style: italic;
+    
+  }
+
