--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -85,6 +85,10 @@
     .project-bottom-images {
         @media screen and (min-width: 700px){
             display: flex;
+
+            figure {
+                width: 50%;
+            }
         }
     }
     .project-image-3, .project-image-4 {
@@ -95,8 +99,6 @@
         padding: 5px;
 
         @media screen and (min-width: 700px){
-        height: 48%;
-        width: 48%;
         max-width: 400px;
         margin: 0;
         }
