--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -8,7 +8,17 @@
     h1, h2, h3 {
         text-align: center;
     }
+
+
+
 }
+
+.project-featured-image {
+    width: 100%;
+    object-fit: cover;
+    min-height: 180px;   
+    border-radius: 4px;     
+    }
 
 .project-details {
     width: 100%;
@@ -82,6 +92,10 @@
     }
 }
 
+.project-image {
+    width: 100%;
+}
+
     .project-bottom-images {
         @media screen and (min-width: 700px){
             display: flex;
@@ -92,8 +106,7 @@
         }
     }
     .project-image-3, .project-image-4 {
-        width: 100%;
-        max-width: 225px;
+        width: 90%;
         display: block;
         margin: 0 auto;
         padding: 5px;
