--- a/src/scss/_projects-section.scss
+++ b/src/scss/_projects-section.scss
@@ -1,17 +1,17 @@
 @use 'variables';
 @use 'mixins' as m;
 
-.featured-image{
-    width: 100%;
-    max-width: 800px;
-    display: block;
-    margin: 0 auto;
-    border-radius: 4px;
+.projects-section {
+    .featured-image{
+        width: 100%;
+        max-width: 800px;
+        display: block;
+        margin: 0 auto;
+        border-radius: 4px;
+    }
 }
 
-.project-image {
-    width: 100%;
-}
+
 
 #light{
     .MuiButtonBase-root.MuiTab-root.MuiTab-textColorPrimary {
