--- a/src/scss/_accordion.scss
+++ b/src/scss/_accordion.scss
@@ -6,9 +6,8 @@
         width: 100%;
         max-width: 350px;
         display: block;
-        margin: 0 auto;
+        margin: 1rem auto;
         border-radius: 4px;
-        padding: 1rem 0;
     }
 }
 
