--- a/src/scss/_projects-section.scss
+++ b/src/scss/_projects-section.scss
@@ -7,6 +7,8 @@
         max-width: 800px;
         display: block;
         margin: 0 auto;
+        object-fit: cover;
+        min-height: 150px;
         border-radius: 4px;
     }
 }
