--- a/src/scss/_project-page.scss
+++ b/src/scss/_project-page.scss
@@ -102,14 +102,14 @@
         }
     }
     .project-image-3, .project-image-4 {
-        width: 90%;
+        width: 94%;
         display: block;
         margin: 0 auto;
         padding: 5px;
 
         @media screen and (min-width: 700px){
         max-width: 400px;
-        margin: 0;
+        margin: 0 auto;
         }
     }
 
