--- a/src/scss/_other-projects-page.scss
+++ b/src/scss/_other-projects-page.scss
@@ -11,7 +11,14 @@
 
 .single-all-project {
     max-width: 400px;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 1rem;
 
+    h3 {
+        text-align: center;
+    }
     p {
         font-size: .8rem;
     }
