--- a/src/scss/_other-projects-page.scss
+++ b/src/scss/_other-projects-page.scss
@@ -1,5 +1,10 @@
 .all-projects-section {
     grid-column-start: 2;
+    margin-top: 60px;
+
+    h1  {
+        text-align: center;
+    }
 }
 
 .all-projects-grid {
