added margin to other projects bottom

--- a/src/scss/_other-projects-page.scss
+++ b/src/scss/_other-projects-page.scss
@@ -1,6 +1,6 @@
 .all-projects-section {
     grid-column-start: 2;
-    margin-top: 60px;
+    margin: 60px 0 80px;
 
     h1  {
         text-align: center;
