removed bottom margin from all projects button

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -88,6 +88,6 @@
     fill: variables.$honolulu;
   }}
 
-  .all-projects-button {
-    margin-bottom: 20px;
-  }
+  // .all-projects-button {
+  //   margin-bottom: 20px;
+  // } removed 1/11/2023
